its always just two things

--- a/mockup/lobby.html
+++ b/mockup/lobby.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ARAM Lobby</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" integrity="sha384-xniVEsCVCrm2Z+EpWEMQIzNBXkQ8Nk+pl7M+cghxfgZLf6V3AHTkMLyf8yCmRYIM" crossorigin="anonymous"></script>
   <style>
     .sheen-button {
       position: relative;
